--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -37,7 +37,8 @@
     "url-parse": "^1.5.3",
     "winston": "^3.3.3",
     "yargs": "^17.2.1",
-    "tslib": "~2.3.1"
+    "tslib": "~2.3.1",
+    "generic-pool": "~3.8.2"
   },
   "devDependencies": {
     "@watr/eslint-config": "0.1.0",
