--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,10 +7,11 @@
   "author": "Adam Saunders <saunders@cs.umass.edu>",
   "license": "ISC",
   "scripts": {
-    "build": "echo 'no build required'"
+    "build": ""
   },
   "peerDependencies": {
-    "eslint": "^8.3.0", "jest": "^27.4.0"
+    "eslint": "^8.3.0",
+    "jest": "~27.4.3"
   },
   "dependencies": {
     "@types/chai": "^4.2.22",
@@ -30,7 +31,5 @@
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "tsconfig-paths": "^3.12.0"
-  },
-  "devDependencies": {
   }
 }
