--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -9,8 +9,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "clean": "rm -r ./dist",
     "compile": "tsc",
-    "build": "rollup -c",
+    "build": "tsc",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "test": "jest"
