--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -4,5 +4,9 @@
     "paths": {
       "~/*": ["src/*"]
     }
-  }
+  },
+  "references": [
+    {"path": "../commonlib"},
+    {"path": "../spider"}
+  ]
 }
