--- a/packages/root/package.json
+++ b/packages/root/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@watr/eslint-config",
+  "name": "@watr/root",
   "private": false,
   "version": "0.1.0",
   "description": "testing and linting dependencies",
@@ -31,5 +31,10 @@
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "tsconfig-paths": "^3.12.0"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "~4.1.0",
+    "@babel/core": "~7.16.0",
+    "@babel/cli": "~7.16.0"
   }
 }
