--- a/packages/spider/tsconfig.build.json
+++ b/packages/spider/tsconfig.build.json
@@ -1,13 +1,11 @@
 {
-  /* Use the config that HAS the aliases for rollup. */
   "extends": "../../tsconfig.json",
-
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "dist",
   },
 
   "include": [
-    "src/**/*"
+    "./src/**/*"
   ]
 }
