--- a/packages/spider/tsconfig.json
+++ b/packages/spider/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "resolveJsonModule": true,
     "paths": {
       "~/*": ["src/*"]
     }
-  }
+  },
+  "references": [
+    {"path": "../commonlib"}
+  ]
 }
