--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "baseUrl": "./",
     "paths": {
       "@watr/commonlib": ["packages/commonlib/src"],
       "@watr/services": ["packages/services/src"],
       "@watr/spider": ["packages/spider/src"],
-      "@watr/eslint-config": ["packages/eslint-config/src"]
+      "@watr/root": ["packages/root/src"]
     }
   }
 }
