--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -1,20 +1,17 @@
 {
   "name": "@watr/commonlib",
-  "private": false,
   "version": "0.1.0",
+  "private": false,
   "description": "Common libs",
   "keywords": [],
   "author": "Adam Saunders <***REMOVED***>",
   "license": "ISC",
-  "main": "dist/index",
-  "types": "dist/index",
-  "directories": {
-    "src": "src"
-  },
+  "main": "dist/src/index",
   "scripts": {
-    "clean": "rm -r ./dist",
+    "clean": "rm -rf ./dist",
     "compile": "tsc",
-    "build": "tsc",
+    "path-rewrite": "../root/node_modules/.bin/babel --config-file ../root/.babelrc-path-alias ./dist -d ./dist",
+    "build": "npm run clean && npm run compile && npm run path-rewrite",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "test": "jest"
@@ -41,7 +38,7 @@
     "tslib": "~2.3.1"
   },
   "devDependencies": {
-    "@watr/eslint-config": "0.1.0",
+    "@watr/root": "0.1.0",
     "@types/chai": "^4.2.22",
     "@types/jest": "^27.0.3",
     "@rollup/plugin-commonjs": "^21.0.1",
