--- a/packages/root/package.json
+++ b/packages/root/package.json
@@ -14,10 +14,13 @@
     "jest": "~27.4.3"
   },
   "dependencies": {
+    "@babel/cli": "~7.16.0",
+    "@babel/core": "~7.16.0",
     "@types/chai": "^4.2.22",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-plugin-module-resolver": "~4.1.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -29,12 +32,8 @@
     "eslint-plugin-unicorn": "^38.0.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "tslib": "^2.3.1",
-    "tsconfig-paths": "^3.12.0"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "~4.1.0",
-    "@babel/core": "~7.16.0",
-    "@babel/cli": "~7.16.0"
   }
 }
