--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -52,7 +52,6 @@
     "slice-ansi": "^5.0.0",
     "split": "^1.0.1",
     "through2": "^4.0.2",
-    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2",
     "url-parse": "^1.5.3",
     "winston": "^3.3.3",
@@ -62,9 +61,6 @@
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/async": "^3.2.10",
     "@types/chai": "^4.2.22",
     "@types/deep-diff": "^1.0.1",
@@ -91,9 +87,6 @@
     "jest": "^27.3.1",
     "json-server": "^0.17.0",
     "madge": "^5.0.1",
-    "rollup": "^2.60.1",
-    "rollup-plugin-ts": "^2.0.2",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8"
+    "ts-node": "^10.4.0"
   }
 }
