--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -1,10 +1,15 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "dist",
     "paths": {
       "~/*": ["src/*"]
     }
   },
+  "include": [
+    "./src/**/*"
+  ],
   "references": [
     {"path": "../commonlib"},
     {"path": "../spider"}
