--- a/packages/commonlib/tsconfig.json
+++ b/packages/commonlib/tsconfig.json
@@ -1,8 +1,13 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist",
     "paths": {
       "~/*": ["src/*"]
     }
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
