--- a/packages/root/package.json
+++ b/packages/root/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-unicorn": "^38.0.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "tslib": "^2.3.1"
+    "tslib": "~2.3.1"
   },
   "devDependencies": {
   }
