--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -14,6 +14,7 @@
     "build": "npm run clean && npm run compile && npm run path-rewrite",
     "lint": "eslint ./src",
     "lint:fix": "eslint src/ --fix",
+    "start": "",
     "test": "jest"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "koa-json": "^2.0.2",
     "koa-router": "^10.1.1",
     "koa-send": "^5.0.1",
+    "lodash": "^4.17.21",
     "logform": "^2.3.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
@@ -73,9 +75,14 @@
     "@types/yargs": "^17.0.7",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
-    "jest": "^27.3.1",
+    "jest": "^27.4.0",
     "json-server": "^0.17.0",
     "madge": "^5.0.1",
-    "ts-node": "^10.4.0"
+    "rollup": "^2.60.1",
+    "rollup-plugin-ts": "^2.0.2",
+    "ts-node": "^10.4.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6"
   }
 }
