--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -23,7 +23,7 @@ always-auth=false
 
 ## Puppeteer: don't download on install
 puppeteer_skip_chromium_download=true         # do not download bundled Chromium during installation step.
-# puppeteer_download_path=./.local-chromium    # overwrite the path for the downloads folder. Defaults to <root>/.local-chromium, where <root> is Puppeteer's package root.
+# puppeteer_download_path=./browser.tmp.d    # overwrite the path for the downloads folder. Defaults to <root>/.local-chromium, where <root> is Puppeteer's package root.
 # http_proxy, https_proxy, no_proxy          # defines HTTP proxy settings that are used to download and run the browser.
 # puppeteer_tmp_dir                          # defines the directory to be used by Puppeteer for creating temporary files. Defaults to os.tmpdir().
 # puppeteer_download_host                    # overwrite URL prefix that is used to download Chromium. Note: this includes protocol and might even include path prefix. Defaults to https://storage.googleapis.com.
