--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -10,11 +10,12 @@
   "scripts": {
     "clean": "rm -rf ./dist",
     "compile": "tsc",
-    "path-rewrite": "../root/node_modules/.bin/babel --config-file ../root/.babelrc-path-alias ./dist -d ./dist",
-    "build": "npm run clean && npm run compile && npm run path-rewrite",
+    "path-rewrite": "../root/bin/fix-path-aliases -f dist",
+    "build": "rushx compile && rushx path-rewrite",
+    "build:watch": "rushx build",
+    "rebuild": "rushx clean && rushx build",
     "lint": "eslint ./src",
     "lint:fix": "eslint src/ --fix",
-    "start": "",
     "test": "jest"
   },
   "dependencies": {
@@ -77,12 +78,6 @@
     "eslint": "^7.32.0",
     "jest": "^27.4.5",
     "json-server": "^0.17.0",
-    "madge": "^5.0.1",
-    "rollup": "^2.61.1",
-    "rollup-plugin-ts": "^2.0.4",
-    "ts-node": "^10.4.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.1"
+    "ts-node": "^10.4.0"
   }
 }
