--- a/packages/root/package.json
+++ b/packages/root/package.json
@@ -7,7 +7,8 @@
   "author": "Adam Saunders <saunders@cs.umass.edu>",
   "license": "ISC",
   "scripts": {
-    "build": ""
+    "build": "",
+    "rebuild": ""
   },
   "peerDependencies": {
     "eslint": "^7.32.0",
