--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -16,7 +16,7 @@
     "rebuild": "rushx clean && rushx build",
     "lint": "eslint ./src",
     "lint:fix": "eslint src/ --fix",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@watr/commonlib": "0.1.0",
@@ -42,38 +42,38 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "pumpify": "^2.0.1",
-    "puppeteer": "^13.0.0",
+    "puppeteer": "^13.0.1",
     "puppeteer-extra": "^3.2.3",
-    "sequelize": "^6.11.0",
+    "sequelize": "^6.12.4",
     "typescript": "^4.5.4",
-    "url-parse": "^1.5.3",
+    "url-parse": "^1.5.4",
     "winston": "^3.3.3",
-    "yargs": "^17.3.0",
+    "yargs": "^17.3.1",
     "tslib": "~2.3.1"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
-    "@types/async": "^3.2.10",
+    "@types/async": "^3.2.12",
     "@types/chai": "^4.3.0",
     "@types/deep-diff": "^1.0.1",
-    "@types/diff": "^5.0.1",
+    "@types/diff": "^5.0.2",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.0",
     "@types/json-server": "^0.14.4",
     "@types/koa": "^2.13.4",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
     "@types/koa-send": "^4.1.3",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^16.11.12",
+    "@types/node": "^17.0.5",
     "@types/puppeteer": "^5.4.4",
     "@types/slice-ansi": "^5.0.0",
     "@types/split": "^1.0.0",
     "@types/through2": "^2.0.36",
-    "@types/url-parse": "^1.4.5",
-    "@types/validator": "^13.7.0",
+    "@types/url-parse": "^1.4.6",
+    "@types/validator": "^13.7.1",
     "@types/wrap-ansi": "^8.0.1",
-    "@types/yargs": "^17.0.7",
+    "@types/yargs": "^17.0.8",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "jest": "^27.4.5",
