--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -49,7 +49,9 @@
     "url-parse": "^1.5.4",
     "winston": "^3.3.3",
     "yargs": "^17.3.1",
-    "tslib": "~2.3.1"
+    "tslib": "~2.3.1",
+    "ioredis": "~4.28.2",
+    "@types/ioredis": "~4.28.6"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
