--- a/packages/root/package.json
+++ b/packages/root/package.json
@@ -11,8 +11,6 @@
     "rebuild": ""
   },
   "peerDependencies": {
-    "eslint": "^7.32.0",
-    "jest": "~27.4.5"
   },
   "dependencies": {
     "@babel/cli": "~7.16.0",
@@ -22,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "babel-plugin-module-resolver": "~4.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -31,6 +30,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-unicorn": "^39.0.0",
+    "jest": "^27.4.5",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "tslib": "~2.3.1"
