--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@watr/commonlib": "0.1.0",
+    "@watr/commlinks": "0.1.0",
     "@watr/spider": "0.1.0",
     "ansi-escapes": "^5.0.0",
     "async": "^3.2.2",
@@ -49,9 +50,7 @@
     "url-parse": "^1.5.4",
     "winston": "^3.3.3",
     "yargs": "^17.3.1",
-    "tslib": "~2.3.1",
-    "ioredis": "~4.28.2",
-    "@types/ioredis": "~4.28.6"
+    "tslib": "~2.3.1"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -78,7 +77,7 @@
     "@types/yargs": "^17.0.8",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
-    "jest": "^27.4.5",
+    "jest":  ^27.4.5",
     "json-server": "^0.17.0",
     "ts-node": "^10.4.0"
   }
