--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -77,7 +77,7 @@
     "@types/yargs": "^17.0.8",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
-    "jest":  ^27.4.5",
+    "jest": "^27.4.5",
     "json-server": "^0.17.0",
     "ts-node": "^10.4.0"
   }
