--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -22,6 +22,7 @@
     "@watr/commonlib": "0.1.0",
     "@watr/commlinks": "0.1.0",
     "@watr/spider": "0.1.0",
+    "@watr/field-extractors": "0.1.0",
     "ansi-escapes": "^5.0.0",
     "async": "^3.2.2",
     "diff": "^5.0.0",
@@ -47,7 +48,6 @@
     "puppeteer-extra": "^3.2.3",
     "sequelize": "^6.12.4",
     "typescript": "^4.5.4",
-    "url-parse": "^1.5.4",
     "winston": "^3.3.3",
     "yargs": "^17.3.1",
     "tslib": "~2.3.1"
@@ -71,7 +71,6 @@
     "@types/slice-ansi": "^5.0.0",
     "@types/split": "^1.0.0",
     "@types/through2": "^2.0.36",
-    "@types/url-parse": "^1.4.6",
     "@types/validator": "^13.7.1",
     "@types/wrap-ansi": "^8.0.1",
     "@types/yargs": "^17.0.8",
