--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -31,10 +31,9 @@
     "split": "^1.0.1",
     "through2": "^4.0.2",
     "typescript": "^4.5.4",
-    "url-parse": "^1.5.4",
+    "tslib": "~2.3.1",
     "winston": "^3.3.3",
-    "yargs": "^17.3.1",
-    "tslib": "~2.3.1"
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -46,11 +45,8 @@
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.5",
-    "@types/slice-ansi": "^5.0.0",
     "@types/split": "^1.0.0",
     "@types/through2": "^2.0.36",
-    "@types/url-parse": "^1.4.6",
-    "@types/wrap-ansi": "^8.0.1",
     "@types/yargs": "^17.0.8",
     "eslint": "^7.32.0",
     "jest": "^27.4.5"
