--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -23,57 +23,35 @@
     "@watr/commlinks": "0.1.0",
     "@watr/spider": "0.1.0",
     "@watr/field-extractors": "0.1.0",
-    "ansi-escapes": "^5.0.0",
     "async": "^3.2.2",
-    "diff": "^5.0.0",
     "dotenv": "^10.0.0",
-    "fast-csv": "^4.3.6",
     "fp-ts": "2.11.5",
     "fs-extra": "^10.0.0",
     "got": "^12.0.0",
-    "io-ts": "^2.2.16",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-ejs": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-router": "^10.1.1",
-    "koa-send": "^5.0.1",
     "lodash": "^4.17.21",
-    "logform": "^2.3.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "pumpify": "^2.0.1",
-    "puppeteer": "^13.0.1",
-    "puppeteer-extra": "^3.2.3",
     "sequelize": "^6.12.4",
     "typescript": "^4.5.4",
-    "winston": "^3.3.3",
-    "yargs": "^17.3.1",
-    "tslib": "~2.3.1"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
     "@types/async": "^3.2.12",
     "@types/chai": "^4.3.0",
-    "@types/deep-diff": "^1.0.1",
-    "@types/diff": "^5.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@types/json-server": "^0.14.4",
     "@types/koa": "^2.13.4",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
-    "@types/koa-send": "^4.1.3",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.5",
     "@types/puppeteer": "^5.4.4",
-    "@types/slice-ansi": "^5.0.0",
-    "@types/split": "^1.0.0",
-    "@types/through2": "^2.0.36",
-    "@types/validator": "^13.7.1",
-    "@types/wrap-ansi": "^8.0.1",
-    "@types/yargs": "^17.0.8",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "jest": "^27.4.5",
