--- a/packages/field-extractors/package.json
+++ b/packages/field-extractors/package.json
@@ -34,6 +34,7 @@
     "@watr/root": "0.1.0",
     "@types/async": "^3.2.12",
     "@types/chai": "^4.3.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.5",
