--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -27,7 +27,6 @@
     "dotenv": "^10.0.0",
     "fp-ts": "2.11.5",
     "fs-extra": "^10.0.0",
-    "got": "^12.0.0",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-json": "^2.0.2",
@@ -37,7 +36,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.12.4",
     "typescript": "^4.5.4",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "axios": "~0.24.0"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
