--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "esnext",
     "moduleResolution": "node",
+    "allowJs": true,
     "sourceMap": true,
     "noEmitOnError": true,
     "noEmit": false,
@@ -19,6 +20,8 @@
     "paths": {
       "@watr/commonlib": ["packages/commonlib/src"],
       "@watr/services": ["packages/services/src"],
+      "@watr/commlinks": ["packages/commlinks/src"],
+      "@watr/field-extractors": ["packages//src"],
       "@watr/spider": ["packages/spider/src"],
       "@watr/root": ["packages/root/src"]
     }
