--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -33,7 +33,8 @@
     "typescript": "^4.5.4",
     "tslib": "~2.3.1",
     "winston": "^3.3.3",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "nconf": "~0.11.3"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -44,6 +45,7 @@
     "@types/diff": "^5.0.2",
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.178",
+    "@types/nconf": "~0.10.1",
     "@types/node": "^17.0.5",
     "@types/split": "^1.0.0",
     "@types/through2": "^2.0.36",
