--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -24,7 +24,6 @@
     "@watr/spider": "0.1.0",
     "@watr/field-extractors": "0.1.0",
     "async": "^3.2.2",
-    "dotenv": "^10.0.0",
     "fp-ts": "2.11.5",
     "fs-extra": "^10.0.0",
     "koa": "^2.13.4",
@@ -37,12 +36,14 @@
     "sequelize": "^6.12.4",
     "typescript": "^4.5.4",
     "winston": "^3.3.3",
-    "axios": "~0.24.0"
+    "axios": "~0.24.0",
+    "nconf": "~0.11.3"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
     "@types/async": "^3.2.12",
     "@types/chai": "^4.3.0",
+    "@types/nconf": "~0.10.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@types/json-server": "^0.14.4",
