--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -8,7 +8,8 @@
     },
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*",
+    "./test/**/*"
   ],
   "references": [
     {"path": "../commonlib"},
