--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -29,7 +29,6 @@
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "koa-json": "^2.0.2",
-    "koa-router": "^10.1.1",
     "lodash": "^4.17.21",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
@@ -37,7 +36,9 @@
     "typescript": "^4.5.5",
     "winston": "^3.5.1",
     "axios": "~0.25.0",
-    "nconf": "~0.11.3"
+    "nconf": "~0.11.3",
+    "@koa/router": "~10.1.1",
+    "@types/koa__router": "~8.0.11"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -49,7 +50,6 @@
     "@types/json-server": "^0.14.4",
     "@types/koa": "^2.13.4",
     "@types/koa-json": "^2.0.20",
-    "@types/koa-router": "^7.4.4",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.14",
     "@types/puppeteer": "^5.4.4",
