--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "esnext",
     "lib": ["ESNext"],
     "moduleResolution": "node",
-    "allowJs": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "allowJs": false,
     "sourceMap": true,
     "noEmitOnError": true,
     "noEmit": false,
