--- a/packages/services/conf/config-production.json
+++ b/packages/services/conf/config-production.json
@@ -2,12 +2,12 @@
     "db": {
         "database": "open_extraction",
         "username": "watrworker",
-        "password": ""
+        "password": "watrpassword"
     },
     "openreview": {
         "restApi": "https://api.openreview.net",
-        "restUser": "",
-        "restPassword": ""
+        "restUser": "***REMOVED***",
+        "restPassword": "***REMOVED***"
     },
     "services": {
     },
