--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -23,14 +23,15 @@
     "async": "^3.2.3",
     "fp-ts": "2.11.8",
     "lodash": "^4.17.21",
-    "puppeteer": "^13.0.1",
+    "puppeteer": "^13.5.0",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-anonymize-ua": "^2.3.3",
     "puppeteer-extra-plugin-block-resources": "^2.3.0",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "typescript": "^4.6.2",
     "winston": "^3.6.0",
-    "generic-pool": "~3.8.2"
+    "generic-pool": "~3.8.2",
+    "tarn": "~3.0.2"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
