--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -30,8 +30,9 @@
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "typescript": "^4.6.2",
     "winston": "^3.6.0",
-    "generic-pool": "~3.8.2",
-    "tarn": "~3.0.2"
+    "tarn": "~3.0.2",
+    "signal-exit": "~3.0.7",
+    "@types/signal-exit": "~3.0.1"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
