--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -38,7 +38,13 @@
     "axios": "~0.26.0",
     "nconf": "~0.11.3",
     "@koa/router": "~10.1.1",
-    "@types/koa__router": "~8.0.11"
+    "@types/koa__router": "~8.0.11",
+    "xml2js": "~0.4.23",
+    "@types/xml2js": "~0.4.9",
+    "sqlite3": "~5.0.2",
+    "mongodb": "~4.4.1",
+    "mongoose": "~6.2.7",
+    "@retorquere/bibtex-parser": "~6.1.4"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
