--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -34,7 +34,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.18.0",
     "typescript": "^4.6.3",
-    "winston": "^3.7.1",
+    "winston": "^3.7.2",
     "axios": "~0.26.1",
     "nconf": "~0.11.3",
     "@koa/router": "~10.1.1",
@@ -42,9 +42,12 @@
     "xml2js": "~0.4.23",
     "@types/xml2js": "~0.4.9",
     "sqlite3": "~5.0.2",
-    "mongodb": "~4.4.1",
-    "mongoose": "~6.2.9",
-    "@retorquere/bibtex-parser": "~6.1.4"
+    "mongodb": "~4.5.0",
+    "mongoose": "~6.2.10",
+    "@retorquere/bibtex-parser": "~6.1.4",
+    "pm2": "~5.2.0",
+    "bree": "~8.0.3",
+    "@ladjs/graceful": "~2.0.1"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
