--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -19,6 +19,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "async": "^3.2.3",
     "lodash": "^4.17.21",
     "crypto-js": "^4.1.1",
     "diff": "^5.0.0",
@@ -38,7 +39,7 @@
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
-    "@types/chai": "^4.3.1",
+    "@types/async": "^3.2.12",
     "@types/jest": "^27.4.1",
     "@types/chai": "^4.3.1",
     "@types/crypto-js": "^4.1.1",
