--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -31,8 +31,7 @@
     "typescript": "^4.6.3",
     "winston": "^3.7.2",
     "tarn": "~3.0.2",
-    "signal-exit": "~3.0.7",
-    "@types/signal-exit": "~3.0.1"
+    "signal-exit": "~3.0.7"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -41,6 +40,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "@types/lodash": "^4.14.182",
+    "@types/signal-exit": "~3.0.1",
     "eslint": "^7.32.0",
     "jest": "^27.5.1"
   }
