--- a/packages/field-extractors/package.json
+++ b/packages/field-extractors/package.json
@@ -28,7 +28,9 @@
     "lodash": "^4.17.21",
     "puppeteer": "^13.6.0",
     "typescript": "^4.6.3",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "xml2js": "~0.4.23",
+    "@types/xml2js": "~0.4.11"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
