spidering/extraction status summary

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Logs
+.log
+# Logs
 *.log
 *.log.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-dist/*
-dist/
 
 
 # Runtime data
@@ -78,3 +78,6 @@ common/autoinstallers/*/.npmrc
 # chrome install used by puppeteer
 puppeteer@13.0.0.local-chromium/
 
+dist/
+
+/config-*.json
