--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -48,7 +48,8 @@
     "pm2": "~5.2.0",
     "bree": "~8.0.3",
     "@ladjs/graceful": "~2.0.1",
-    "date-fns": "~2.28.0"
+    "date-fns": "~2.28.0",
+    "fast-check": "~2.25.0"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
