fixed npe due to async/await bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "paths": {
       "@watr/commonlib": ["packages/commonlib/src"],
       "@watr/services": ["packages/services/src"],
-      "@watr/field-extractors": ["packages/src"],
+      "@watr/field-extractors": ["packages/field-extractors/src"],
       "@watr/spider": ["packages/spider/src"],
       "@watr/root": ["packages/root/src"]
     }
