--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -22,6 +22,7 @@
     "@watr/commonlib": "0.1.0",
     "async": "^3.2.4",
     "fp-ts": "2.13.1",
+    "fs-extra": "^10.1.0",
     "lodash": "^4.17.21",
     "puppeteer": "^19.2.2",
     "puppeteer-extra": "^3.3.4",
@@ -31,12 +32,20 @@
     "typescript": "^4.8.4",
     "winston": "^3.8.2",
     "tarn": "~3.0.2",
-    "signal-exit": "~3.0.7"
+    "signal-exit": "~3.0.7",
+    "koa": "^2.13.4",
+    "koa-body": "^6.0.1",
+    "koa-json": "^2.0.2",
+    "@koa/router": "~12.0.0"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
     "@types/async": "^3.2.15",
+    "@types/koa__router": "~12.0.0",
+    "@types/koa": "^2.13.5",
+    "@types/koa-json": "^2.0.20",
     "@types/chai": "^4.3.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@types/lodash": "^4.14.187",
