--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^18.11.9",
     "@types/lodash": "^4.14.187",
     "@types/signal-exit": "~3.0.1",
+    "axios": "~1.1.3",
     "eslint": "^7.32.0",
     "jest": "^29.2.2"
   }
