--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -30,7 +30,6 @@
     "pumpify": "^2.0.1",
     "split": "^1.0.1",
     "through2": "^4.0.2",
-    "typescript": "^5.0.2",
     "tslib": "~2.5.0",
     "winston": "^3.8.2",
     "yargs": "^17.7.1",
@@ -50,6 +49,9 @@
     "@types/split": "^1.0.2",
     "@types/through2": "^2.0.38",
     "@types/yargs": "^17.0.22",
+    "npm-run-all": "^4.1.5",
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5",
     "eslint": "^8.36.0",
     "jest": "^29.5.0"
   }
