--- a/packages/field-extractors/package.json
+++ b/packages/field-extractors/package.json
@@ -27,10 +27,9 @@
     "fs-extra": "^11.1.0",
     "lodash": "^4.17.21",
     "puppeteer": "^19.7.5",
-    "typescript": "^5.0.2",
+    "typescript": "^4.9.5",
     "winston": "^3.8.2",
-    "xml2js": "~0.4.23",
-    "@types/xml2js": "~0.4.11"
+    "xml2js": "~0.4.23"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
@@ -41,8 +40,11 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
     "@types/url-parse": "^1.4.8",
+    "@types/xml2js": "~0.4.11"
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
+    "npm-run-all": "^4.1.5",
+    "tsup": "^6.6.3",
     "jest": "^29.5.0"
   }
 }
