--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -26,7 +26,7 @@
     "fp-ts": "2.13.1",
     "fs-extra": "^11.1.0",
     "lodash": "^4.17.21",
-    "typescript": "^5.0.2",
+    "typescript": "^4.9.5",
     "winston": "^3.8.2",
     "axios": "~1.3.4",
     "nconf": "~0.12.0",
@@ -53,6 +53,8 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
     "@types/xml2js": "~0.4.11",
+    "npm-run-all": "^4.1.5",
+    "tsup": "^6.6.3",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
