--- a/packages/spider/package.json
+++ b/packages/spider/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@watr/commonlib": "0.1.0",
     "async": "^3.2.4",
+    "axios": "~1.3.4",
     "fp-ts": "2.13.1",
     "fs-extra": "^11.1.0",
     "lodash": "^4.17.21",
@@ -29,7 +30,7 @@
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
     "puppeteer-extra-plugin-block-resources": "^2.4.3",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "typescript": "^5.0.2",
+    "typescript": "^4.9.5",
     "winston": "^3.8.2",
     "tarn": "~3.0.2",
     "signal-exit": "~3.0.7",
@@ -50,7 +51,8 @@
     "@types/node": "^18.15.3",
     "@types/lodash": "^4.14.191",
     "@types/signal-exit": "~3.0.1",
-    "axios": "~1.3.4",
+    "npm-run-all": "^4.1.5",
+    "tsup": "^6.6.3",
     "eslint": "^8.36.0",
     "jest": "^29.5.0"
   }
