--- a/packages/field-extractors/package.json
+++ b/packages/field-extractors/package.json
@@ -23,28 +23,28 @@
     "@watr/spider": "0.1.0",
     "url-parse": "^1.5.10",
     "async": "^3.2.4",
-    "fp-ts": "2.13.1",
-    "fs-extra": "^11.1.0",
+    "fp-ts": "2.16.0",
+    "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
-    "puppeteer": "^19.7.5",
+    "puppeteer": "^20.4.0",
     "typescript": "^4.9.5",
-    "winston": "^3.8.2",
-    "xml2js": "~0.4.23"
+    "winston": "^3.9.0",
+    "xml2js": "~0.6.0"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
-    "@types/async": "^3.2.18",
-    "@types/chai": "^4.3.4",
+    "@types/async": "^3.2.20",
+    "@types/chai": "^4.3.5",
     "@types/fs-extra": "^11.0.1",
-    "@types/jest": "^29.5.0",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.3",
+    "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.2.5",
     "@types/url-parse": "^1.4.8",
-    "@types/xml2js": "~0.4.11"
+    "@types/xml2js": "~0.4.11",
     "chai": "^4.3.7",
-    "eslint": "^8.36.0",
+    "eslint": "^8.41.0",
     "npm-run-all": "^4.1.5",
-    "tsup": "^6.6.3",
+    "tsup": "^6.7.0",
     "jest": "^29.5.0"
   }
 }
