--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -22,6 +22,7 @@
     "async": "^3.2.4",
     "lodash": "^4.17.21",
     "crypto-js": "^4.1.1",
+    "date-fns": "~2.30.0",
     "diff": "^5.1.0",
     "fp-ts": "2.16.0",
     "fs-extra": "^11.1.1",
