--- a/packages/commonlib/package.json
+++ b/packages/commonlib/package.json
@@ -20,40 +20,41 @@
   },
   "dependencies": {
     "async": "^3.2.4",
-    "lodash": "^4.17.21",
     "crypto-js": "^4.1.1",
     "date-fns": "~2.30.0",
     "diff": "^5.1.0",
     "fp-ts": "2.16.0",
     "fs-extra": "^11.1.1",
     "io-ts": "^2.2.20",
+    "lodash": "^4.17.21",
     "logform": "^2.5.1",
+    "nconf": "~0.12.0",
     "pumpify": "^2.0.1",
     "split": "^1.0.1",
     "through2": "^4.0.2",
     "tslib": "~2.5.3",
     "winston": "^3.9.0",
     "yargs": "^17.7.2",
-    "nconf": "~0.12.0"
+    "winston-transport": "~4.5.0"
   },
   "devDependencies": {
-    "@watr/root": "0.1.0",
     "@types/async": "^3.2.20",
-    "@types/jest": "^29.5.2",
     "@types/chai": "^4.3.5",
     "@types/crypto-js": "^4.1.1",
     "@types/diff": "^5.0.3",
     "@types/fs-extra": "^11.0.1",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@types/nconf": "~0.10.3",
     "@types/node": "^20.3.1",
     "@types/split": "^1.0.2",
     "@types/through2": "^2.0.38",
-    "@types/yargs": "^17.0.24",
+    "@types/yargs": "~17.0.24",
+    "@watr/root": "0.1.0",
+    "eslint": "^8.43.0",
+    "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "tsup": "^7.0.0",
-    "typescript": "^4.9.5",
-    "eslint": "^8.43.0",
-    "jest": "^29.5.0"
+    "typescript": "^4.9.5"
   }
 }
