--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -43,7 +43,12 @@
     "@types/migrate-mongo": "~10.0.0",
     "@breejs/later": "~4.1.0",
     "@types/breejs__later": "~4.1.2",
-    "winston-transport": "~4.5.0"
+    "winston-transport": "~4.5.0",
+    "supertest": "~6.3.3",
+    "@types/supertest": "~2.0.12",
+    "express": "~4.18.2",
+    "@types/express": "~4.17.17",
+    "miragejs": "~0.1.47"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
