--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -23,10 +23,10 @@
     "@watr/spider": "0.1.0",
     "@watr/field-extractors": "0.1.0",
     "async": "^3.2.4",
-    "fp-ts": "2.16.0",
+    "fp-ts": "2.13.1",
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.21",
-    "typescript": "^5.1.6",
+    "typescript": "^4.9.5",
     "winston": "^3.10.0",
     "axios": "~1.4.0",
     "nconf": "~0.12.0",
@@ -48,7 +48,8 @@
     "@types/supertest": "~2.0.12",
     "express": "~4.18.2",
     "@types/express": "~4.17.17",
-    "miragejs": "~0.1.47"
+    "miragejs": "~0.1.47",
+    "source-map-support": "~0.5.21"
   },
   "devDependencies": {
     "@watr/root": "0.1.0",
